...
                android:onClick="onStartTestClick"
                android:text="@string/next"
                android:theme="?primaryButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrepareSubmit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:visibility="visible">
...
                app:cornerRadius="3dp"
                app:strokeColor="@color/button_green_selected"
                app:strokeWidth="1dp"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_phase_2"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/button_green"
                android:enabled="true"
                android:letterSpacing="0"
                android:minWidth="230dp"
                android:minHeight="65dp"
                android:onClick="onInstructionsClick"
                android:text="@string/submitResult"
                android:textAllCaps="true"
                android:textSize="15sp"
                app:cornerRadius="3dp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>
...
